=====================
Uliweb Change Log
=====================

0.1.5 Version
-----------------

0.1.4 Version
-----------------

#. Fix utils/date.to_datetime() support %f(misrosecond) format
#. Add microsecond format support in utils/date.py
#. Improve DateField, TimeField, DatetimeField process with date module
#. Remove doc test from uliform.py to test_form.py
#. Fix rules.py can't parse Class View function directly, such as defined in
   settings.ini, also fix app URL definition for relative expose bug.
#. Add test_sorteddict.py and add sort() method to sorteddict class
#. Add common set_var and get_var and configure them in default_settings.ini
#. improve soap app, add multiple soap support, details you should see soap doc
#. Refactor form, add build propert and function to Form class, and the result
   should be: pre_html, begin, body, buttons, end, post_html
#. Add default parameter to uliweb/utils/common.py get_choice()
#. Improve template extend and include process, if you extend the same filename
   with current filename, then it'll find the parent same named filename. This
   way can make new same named filename but extended from parent. Also support 
   include tag.
#. Add APP_LAYOUT support in uliweb.contrib.template, so in your template you can
   use: `{{use layout_template}}` in your tmplate, and config the app layout template
   as: 
    
        [APP_LAYOUTS]
        appname = 'layout.html'
        
   so when render the template, the `layout_template` will be replaced with `layout.html`
#. Add QueryString and query_string support in common.py
#. Fix dispatch signal process bug
#. Set werkzeug log level to 'info', #issue 2
#. Improve template_layout.py checkbox creation
#. Change wsgi_staticfiles apps order, later defined app will be processed earlier
#. Refactor manage.py add call() function, add -f option to makeproject and makeapp
#. Add test_cache.py test file.
#. Add creator parameter to cache.get() and also support callable for value