@@ -12,8 +12,6 @@ serial_cls = 'weto.cache.Serial'
 
 [CACHE_STORAGE]
 data_dir = './caches'
-file_dir = './caches/cache_files'
-lock_dir = './caches/cache_files_lock'
 
 [FUNCTIONS]
 get_cache = 'uliweb.contrib.cache.get_cache'
