@@ -5,6 +5,8 @@ Uliweb Change Log
 0.1.5 Version
 -----------------
 
+#. Change cache settings, remove file_dir and lock_dir as 0.1.3 before
+
 0.1.4 Version
 -----------------
 
